# Slide-Share-Downloader-free

./: .replit  README.md  app.py  pyproject.toml  replit.md  requirements.txt  robots.txt  sitemap.xml
static/: style.css
templates/: article.html  base.html  blog.html  disclaimer.html  dmca.html  index.html  privacy.html  terms.html
