[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.2",
    "flask==2.2.5",
    "gunicorn>=23.0.0",
    "img2pdf==0.4.4",
    "pillow==9.5.0",
    "python-pptx==0.6.22",
    "requests==2.31.0",
]
